Fix alignment for ad box

--- a/assets/stylesheets/responsive/_frontpage_layout.scss
+++ b/assets/stylesheets/responsive/_frontpage_layout.scss
@@ -162,6 +162,11 @@
       margin-bottom: 12px;
       box-shadow: 0 2px 0 darken($color_chiedi_light_green, 10%);
 
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
       h4 {
         color: $color_white;
         margin: 0;
@@ -171,6 +176,7 @@
       p {
         font-size: 0.8rem;
         line-height: 1.1rem;
+        margin-bottom: 0;
       }
       a {
         color: $color_white;
